# SkinMeshGL

./: CMakeLists.txt  README.md
include/SkinMeshGL/: SmgAnimationKey.h  SmgBoneCombination.h  SmgCoords.h  SmgFace.h  SmgFrame.h  SmgImg.h  SmgMat.h  SmgMaterial.h  SmgMesh.h  SmgModel.h  SmgQuaternion.h  SmgSkinInfo.h  SmgSkinWeight.h  SmgUtil.h  SmgVertex.h  XFileLoad.h  XLex.h  stdafx.h
model/: 01.x  4-1-2.x  4-1.x  4-4.x  Robot_Action.x  Robot_Action2.x  Robot_Action3.x  Robot_Action4.x  c01bill1.tga  c01road.tga  c01sidew.tga  cube-move.x  cube-rot.x  cube-rot2.x  cube-scale.x  hero01_1.tga  hero01_2.tga  model2.x  model3.x  robo.x  robo_scene.x  robo_scene_v6.x  tiny.x  tset-FrameAnim.x  tset-FrameAnim2.x
src/: SmgAnimationKey.cpp  SmgCoords.cpp  SmgFace.cpp  SmgFrame.cpp  SmgImg.cpp  SmgMat.cpp  SmgMaterial.cpp  SmgMesh.cpp  SmgModel.cpp  SmgQuaternion.cpp  SmgSkinInfo.cpp  SmgSkinWeight.cpp  SmgUtil.cpp  SmgVertex.cpp  XFileLoad.cpp  XLex.cpp  main.cpp
